tests/reject/closureError.emojic
🐇 🍤 🍇
  🐇❗️💚 g 🍇🔡➡️🔡🍉 🚧🚧 🍇
    😀 🔺⁉️g 🔤DARTH VADER🔤❗️❗️
  🍉
🍉


🏁 🍇
  🍇 g🔡 ➡️🔡 🚧🚧
    🚨🆕🚧🆕🔤This is an error🔤❗️
  🍉 ➡️ closure

  🥑 💚🐇🍤 closure❗️ 🍇
  🍉
  🙅 error 🍇
    😀 🍪🔤An error occured: 🔤 💬error❗️ 🍪 ❗️
  🍉
🍉
